- Fixed results of update fetcher not showing correctly in past versions
- Fixed some of the users continued to experience problem upon start-up #28
- SetJail command now gets more complex, with more per jail settings available
- Fixed 'jailed' and 'tpjail' commands have their return statement missing #31 #32
- Bail availability now works for individual jails (/setjail <jail> bail=true/false)
- Fixed display issues and plugin compatibility issues of Bail command #33

1.1.5 - 31/JUL/2017
- Fixed language initialization error of missing file (Critical fix)
- Fixed "listener.player.not.allowed.leave" message being overlapped
- Emoji of prisoner UI when Bail is disabled is now animated
- Added 'allow-visit' option, allows/disallows players to visit jails

1.1.4 - 30/JUL/2017
- Updated API version, compatible with the current latest PocketMine software
- Fixed old configuration files being deleted when server restarts
- Fixed configuration updater not working perfectly upon plugin installation
- Fixed errors popping out upon mine set and player quit
- Fixed all cmds & tasks having wrong declaration due to updated PM API
- Improved stability of version update checker
- A more professional look of the README file :D

1.1.3 - 19/JUL/2017
- Updated Russian language file

1.1.2 - 07/MAY/2017
- Removed auto installer due to its violation of Poggit's submission rules.
- Added support for checking latest version from Poggit's repository.
- Fixed console spamming when PlayerMoveEvent is called.
- Fixed game mode not being set correctly when prisoners join the server.

1.1.1 - 06/MAY/2017
- Changed the way time data is updated and processed every second, reduces lags

1.0.2
- Fixed prisoners able to break blocks when mine is set in that jail #22
- Russian is now fully translated. #23

1.0.1- 19/MAR/2017
- Prisoners in deleted jails are now assigned automatically to random jails #21
- Offline unjailed players are now teleported back to spawn when they join #20