@@ -52,6 +52,7 @@
   "timer.broadcast.disabled": "disabled",
   "join.uuid.rejected.kickmsg": "&c&b[JAIL&c]\n&eYour UUID is duplicated with a jailed player",
   "setjail.bail.value": "&eAllow bail: &6%bail%",
+  "setjail.visit.value": "&eAllow visit: &6%visit%",
   "sign.destroy.success": "[Jail] Bail sign removed!",
   "sign.create.success": "[Jail] Bail sign created!",
   "sign.not.jailed": "&cYou are not jailed!",
