@@ -52,6 +52,7 @@
 	"timer.broadcast.disabled": "停用",
   "join.uuid.rejected.kickmsg": "&c&b[監獄&c]\n&e您的UUID與一名被監禁的玩家相同",
 	"setjail.bail.value": "&e允許保釋： &6%bail%",
+	"setjail.visit.value": "&eAllow visit: &6%visit%",
 	"sign.destroy.success": "[Jail] Bail sign removed!",
 	"sign.create.success": "[Jail] Bail sign created!",
 	"sign.not.jailed": "&cYou are not jailed!",
