@@ -9,6 +9,7 @@ Changelog of Jail
 - SetJail command now gets more complex, with more per jail settings available
 - Fixed 'jailed' and 'tpjail' commands have their return statement missing #31 #32
 - Bail availability now works for individual jails (/setjail <jail> bail=true/false)
+- Visit availability now works for individual jails (/setjail <jail> visit=true/false)
 - Fixed display issues and plugin compatibility issues of Bail command #33
 
 1.1.5 - 31/JUL/2017
